Добавил приём заявок на аренду
